#5 - 자바21 대응: 테스트 실행 시 발생하는 경고 로그 대응
최신 자바 버전에서 있었던 변경에 의해 발생하는
경고를 파악하고, 대응함.
이것으로 경고 로그가 더 이상 발생하지 않음.

* Class data sharing (CDS) 경고
* Dynamic loading of agents 경고