@@ -42,4 +42,5 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs('-Xshare:off', '-XX:+EnableDynamicAgentLoading')
 }
